--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="league">League</string>
     <string name="description">Description</string>
+    <string name="social_media">Social Media</string>
 </resources>
